src/highlighting/snapshots/zsh_patina__highlighting__highlighter__tests__env__c_existing_directory_no_space.snap
---
source: src/highlighting/highlighter.rs
expression: "cfg.highlight(\"env -Cmydir ls\")?"
---
env -Cmydir ls

0   3   `env`    CALLABLE `env`
3   5   ` -`     punctuation.definition.parameter
5   6   `C`      variable.parameter.option
6   11  `mydir`  meta.function-call.arguments + dynamic.path.directory.complete
12  14  `ls`     CALLABLE `ls`
