src/highlighting/snapshots/zsh_patina__highlighting__highlighter__tests__env__c_missing_directory.snap
---
source: src/highlighting/highlighter.rs
expression: "cfg.highlight(\"env -C foobar ls\")?"
---
env -C foobar ls

0   3   `env`     CALLABLE `env`
3   5   ` -`      punctuation.definition.parameter
5   6   `C`       variable.parameter.option
7   13  `foobar`  meta.function-call.arguments
14  16  `ls`      CALLABLE `ls`
