src/highlighting/snapshots/zsh_patina__highlighting__highlighter__tests__env__c_missing_directory_no_space.snap
---
source: src/highlighting/highlighter.rs
expression: "cfg.highlight(\"env -Cfoobar ls\")?"
---
env -Cfoobar ls

0   3   `env`     CALLABLE `env`
3   5   ` -`      punctuation.definition.parameter
5   6   `C`       variable.parameter.option
6   12  `foobar`  meta.function-call.arguments
13  15  `ls`      CALLABLE `ls`
