src/highlighting/snapshots/zsh_patina__highlighting__highlighter__tests__env__double_i.snap
---
source: src/highlighting/highlighter.rs
expression: "cfg.highlight(\"env -ii ls\")?"
---
env -ii ls

0  3   `env`  CALLABLE `env`
3  5   ` -`   punctuation.definition.parameter
5  7   `ii`   variable.parameter.option
8  10  `ls`   CALLABLE `ls`
