src/highlighting/snapshots/zsh_patina__highlighting__highlighter__tests__env__i.snap
---
source: src/highlighting/highlighter.rs
expression: "cfg.highlight(\"env -i ls\")?"
---
env -i ls

0  3  `env`  CALLABLE `env`
3  5  ` -`   punctuation.definition.parameter
5  6  `i`    variable.parameter.option
7  9  `ls`   CALLABLE `ls`
