src/highlighting/snapshots/zsh_patina__highlighting__highlighter__tests__env__i_unset.snap
---
source: src/highlighting/highlighter.rs
expression: "cfg.highlight(\"env -i --unset=_ env\")?"
---
env -i --unset=_ env

0   3   `env`    CALLABLE `env`
3   5   ` -`     punctuation.definition.parameter
5   6   `i`      variable.parameter.option
6   9   ` --`    punctuation.definition.parameter
9   14  `unset`  variable.parameter.option
14  15  `=`      keyword.operator.assignment.option
15  16  `_`      meta.function-call.arguments
17  20  `env`    CALLABLE `env`
