src/highlighting/snapshots/zsh_patina__highlighting__highlighter__tests__env__i_var.snap
---
source: src/highlighting/highlighter.rs
expression: "cfg.highlight(\"env -i bar=foo env\")?"
---
env -i bar=foo env

0   3   `env`  CALLABLE `env`
3   5   ` -`   punctuation.definition.parameter
5   6   `i`    variable.parameter.option
7   10  `bar`  variable.other.readwrite.assignment
10  11  `=`    keyword.operator.assignment
11  14  `foo`  string.unquoted
15  18  `env`  CALLABLE `env`
