src/highlighting/snapshots/zsh_patina__highlighting__highlighter__tests__env__ignore_environment.snap
---
source: src/highlighting/highlighter.rs
expression: "cfg.highlight(\"env --ignore-environment ls\")?"
---
env --ignore-environment ls

0   3   `env`                 CALLABLE `env`
3   6   ` --`                 punctuation.definition.parameter
6   24  `ignore-environment`  variable.parameter.option
25  27  `ls`                  CALLABLE `ls`
